tests/lean/tst9.lean.expected.out
  Set: pp::colors
  Set: pp::unicode
  Assumed: f
  Assumed: N
  Assumed: g
  Assumed: a
tst9.lean:5:6 error: type mismatch at application
    g ⊤ (f ?M::0 a a)
Function type:
    N → N → Bool
Arguments types:
    ⊤ : Bool
    f ?M::0 a a : ?M::0
